add style to center image and header text of result

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,3 +22,11 @@
 .panel-body{
   min-height: 650px;
 }
+h3 {
+  text-align: center;
+}
+img {
+  display: block;
+  margin: auto;
+  padding: 40px;
+}
