--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 #results div {
   display: none;
 }
-
+}
 .jumbotron {
   text-align: center;
 }
@@ -25,11 +25,15 @@
 .panel-footer {
   min-height: 100px;
 }
-h3 {
+h3, h2 {
   text-align: center;
 }
 img {
   display: block;
   margin: auto;
   padding: 40px;
+}
+.quiz {
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
