add additional style. Jumbotron becomes an orange gadient and blue footer added.

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,9 +3,22 @@
 }
 #languageQuizzes > div {
   display: none;
+  max-width: 700px;
+  padding-top: 100px;
+  margin: auto;
 }
 .jumbotron {
   text-align: center;
+//this mess
+background: rgba(255,165,56,0.97);
+background: -moz-linear-gradient(top, rgba(255,165,56,0.97) 0%, rgba(255,165,56,0.56) 31%, rgba(255,221,180,0) 74%, rgba(255,255,255,0) 100%);
+background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,165,56,0.97)), color-stop(31%, rgba(255,165,56,0.56)), color-stop(74%, rgba(255,221,180,0)), color-stop(100%, rgba(255,255,255,0)));
+background: -webkit-linear-gradient(top, rgba(255,165,56,0.97) 0%, rgba(255,165,56,0.56) 31%, rgba(255,221,180,0) 74%, rgba(255,255,255,0) 100%);
+background: -o-linear-gradient(top, rgba(255,165,56,0.97) 0%, rgba(255,165,56,0.56) 31%, rgba(255,221,180,0) 74%, rgba(255,255,255,0) 100%);
+background: -ms-linear-gradient(top, rgba(255,165,56,0.97) 0%, rgba(255,165,56,0.56) 31%, rgba(255,221,180,0) 74%, rgba(255,255,255,0) 100%);
+background: linear-gradient(to bottom, rgba(255,165,56,0.97) 0%, rgba(255,165,56,0.56) 31%, rgba(255,221,180,0) 74%, rgba(255,255,255,0) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa538', endColorstr='#ffffff', GradientType=0 );
+
 }
 .jumbotron img {
   display: block;
@@ -39,4 +52,12 @@ img {
 .quiz {
   margin-top: 30px;
   margin-bottom: 10px;
+}
+.footer {
+  height: 200px;
+  background: #4cbaba;
+  margin-top: 100px;
+}
+.panel-heading {
+  background-color:;
 }
