--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
   max-width: 700px;
   padding-top: 100px;
   margin: auto;
+  background-color:
 }
 .jumbotron {
   text-align: center;
@@ -58,9 +59,12 @@ img {
   background: #4cbaba;
   margin-top: 100px;
 }
-.panel-heading {
-  background-color:;
-}
+
 a, a:hover {
   text-decoration: none;
+}
+.testknow {
+  background-color: rgba(255, 165, 0, .5);
+  min-height: 300px;
+  padding-top: 50px;
 }
